# fileformat-experiment

./: Cargo.toml
src/: main.rs  parse.rs  reader_experiment.rs  vcf.rs
